# gitlab-cli

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  auth.rs  cli.rs  config.rs  main.rs
src/api/: branches.rs  ci.rs  groups.rs  issues.rs  merge_requests.rs  mirrors.rs  mod.rs  raw.rs  webhooks.rs
src/commands/: branch.rs  ci.rs  group.rs  issue.rs  mod.rs  mr.rs  print.rs  project.rs  webhook.rs
